--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "vue-js-client-crud",
   "version": "0.1.0",
   "private": true,
-  "main": "server.js",
+  "postinstall": "npm run build",
+  "start": "node server.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
