--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "vue-js-client-crud",
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x"
+  },
   "version": "0.1.0",
   "private": true,
-  "postinstall": "npm run build",
   "start": "npm run serve",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "vue-cli-service serve"
+    "start": "vue-cli-service serve",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
@@ -30,7 +34,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
+    "@vue/cli-service": "^4.5.11",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
